--- a/package.json
+++ b/package.json
@@ -3,9 +3,15 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./src/bin/www"
+    "client-install": "cd client && npm install",
+    "start": "node src/app.js",
+    "server": "nodemon src/app.js",
+    "client": "npm start --prefix client",
+    "dev": "concurrently \"npm run server\" \"npm run client\""
   },
   "dependencies": {
+    "@material-ui/core": "^4.9.1",
+    "bootstrap": "^4.4.1",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
     "debug": "~2.6.9",
@@ -16,6 +22,10 @@
     "jade": "~1.11.0",
     "mongoose": "^5.8.11",
     "morgan": "~1.9.1",
-    "react": "^16.12.0"
+    "react-bootstrap": "^1.0.0-beta.16",
+    "react-router-dom": "^5.1.2"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.2"
   }
 }
