--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@material-ui/core": "^4.9.1",
     "bootstrap": "^4.4.1",
+    "contentful": "^7.13.1",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
     "debug": "~2.6.9",
@@ -23,6 +24,7 @@
     "mongoose": "^5.8.11",
     "morgan": "~1.9.1",
     "react-bootstrap": "^1.0.0-beta.16",
+    "react-google-maps": "^9.4.5",
     "react-router-dom": "^5.1.2"
   },
   "devDependencies": {
