--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "morgan": "~1.9.1",
     "react-bootstrap": "^1.0.0-beta.16",
     "react-google-maps": "^9.4.5",
+    "react-places-autocomplete": "^7.2.1",
     "react-router-dom": "^5.1.2"
   },
   "devDependencies": {
