Improved Location Logic

--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-google-autocomplete": "^1.1.2",
     "react-google-maps": "^9.4.5",
     "react-native-maps-directions": "^1.7.3",
+    "react-native-paper": "^3.6.0",
     "react-places-autocomplete": "^7.2.1",
     "react-router-dom": "^5.1.2",
     "swr": "^0.1.17",
