--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@google/maps": "^1.1.0",
     "@material-ui/core": "^4.9.1",
     "bootstrap": "^4.4.1",
+    "concurrently": "^5.1.0",
     "contentful": "^7.13.1",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
