--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@google/maps": "^1.1.0",
+    "@googlemaps/google-maps-services-js": "^2.3.1",
     "@material-ui/core": "^4.9.1",
     "bootstrap": "^4.4.1",
     "contentful": "^7.13.1",
