--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "google-maps-react": "^2.0.2",
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
-    "mongoose": "^5.9.4",
+    "joi": "^14.3.1",
+    "mongoose": "^5.9.5",
     "morgan": "~1.9.1",
     "react-bootstrap": "^1.0.0-beta.16",
     "react-geocode": "^0.2.1",
