--- a/package.json
+++ b/package.json
@@ -43,5 +43,11 @@
   "devDependencies": {
     "jest": "24.9.0",
     "nodemon": "^2.0.2"
+  },
+  "jest": {
+    "testEnvironment": "node",
+    "coveragePathIgnorePatterns": [
+      "/node_modules/"
+    ]
   }
 }
