--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "private": true,
   "scripts": {
     "client-install": "cd client && npm install",
-    "start": "node src/app.js",
-    "server": "nodemon src/app.js",
+    "start": "node src/server.js",
+    "server": "nodemon src/server.js",
     "client": "npm start --prefix client",
     "dev": "concurrently \"npm run server\" \"npm run client\"",
     "test": "jest"
@@ -42,7 +42,8 @@
   },
   "devDependencies": {
     "jest": "24.9.0",
-    "nodemon": "^2.0.2"
+    "nodemon": "^2.0.2",
+    "supertest": "^4.0.2"
   },
   "jest": {
     "testEnvironment": "node",
