--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@googlemaps/google-maps-services-js": "^2.3.1",
     "@material-ui/core": "^4.9.1",
     "bootstrap": "^4.4.1",
+    "concurrently": "^5.1.0",
     "contentful": "^7.13.1",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
