--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@google/maps": "^1.1.0",
     "@googlemaps/google-maps-services-js": "^2.3.1",
     "@material-ui/core": "^4.9.1",
+    "@material-ui/icons": "^4.9.1",
     "bootstrap": "^4.4.1",
     "concurrently": "^5.1.0",
     "contentful": "^7.13.1",
@@ -29,6 +30,7 @@
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
     "joi": "^14.3.1",
+    "material-ui": "^0.20.2",
     "mongoose": "^5.9.5",
     "morgan": "~1.9.1",
     "react-bootstrap": "^1.0.0-beta.16",
