--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "mongoose": "^5.9.5",
     "morgan": "~1.9.1",
     "react-bootstrap": "^1.0.0-beta.16",
+    "react-bootstrap-spinner": "^1.0.0",
     "react-geocode": "^0.2.1",
     "react-google-autocomplete": "^1.1.2",
     "react-google-maps": "^9.4.5",
