--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@google/maps": "^1.1.0",
     "@googlemaps/google-maps-services-js": "^2.3.1",
     "@material-ui/core": "^4.9.1",
+    "@material-ui/icons": "^4.9.1",
     "bcryptjs": "^2.4.3",
     "bootstrap": "^4.4.1",
     "concurrently": "^5.1.0",
