--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@googlemaps/google-maps-services-js": "2.3.1",
     "@material-ui/core": "4.9.1",
     "@material-ui/icons": "4.9.1",
+    "@material-ui/lab": "^4.0.0-alpha.46",
     "bcryptjs": "2.4.3",
     "bootstrap": "4.4.1",
     "concurrently": "5.1.0",
@@ -32,6 +33,7 @@
     "google-maps-react": "2.0.2",
     "http-errors": "~1.6.3",
     "joi": "14.3.1",
+    "joi-password-complexity": "^4.1.0",
     "mongoose": "5.9.5",
     "morgan": "~1.9.1",
     "passport": "0.4.1",
