--- a/package.json
+++ b/package.json
@@ -38,8 +38,10 @@
     "morgan": "~1.9.1",
     "passport": "0.4.1",
     "passport-local": "1.0.0",
+    "react": "^16.13.1",
     "react-bootstrap": "1.0.0-beta.16",
     "react-bootstrap-spinner": "1.0.0",
+    "react-dom": "^16.13.1",
     "react-geocode": "0.2.1",
     "react-google-autocomplete": "1.1.2",
     "react-google-maps": "9.4.5",
