--- a/client/package.json
+++ b/client/package.json
@@ -9,9 +9,9 @@
     "@testing-library/user-event": "7.2.1",
     "axios": "0.19.2",
     "bootstrap": "4.4.1",
-    "react": "16.12.0",
+    "react": "^16.13.1",
     "react-bootstrap": "1.0.0-beta.16",
-    "react-dom": "16.12.0",
+    "react-dom": "^16.13.1",
     "react-scripts": "3.4"
   },
   "scripts": {
