--- a/package.json
+++ b/package.json
@@ -17,8 +17,8 @@
     "@material-ui/icons": "^4.9.1",
     "@material-ui/lab": "^4.0.0-alpha.46",
     "axios": "^0.19.2",
-    "bcryptjs": "2.4.3",
-    "bootstrap": "4.4.1",
+    "bcryptjs": "^2.4.3",
+    "bootstrap": "^4.4.1",
     "concurrently": "5.1.0",
     "connect-flash": "0.1.1",
     "contentful": "7.13.1",
@@ -27,18 +27,19 @@
     "debug": "2.6.9",
     "dotenv": "8.2.0",
     "ejs": "3.0.1",
-    "express": "4.16.4",
+    "express": "^4.16.4",
     "express-ejs-layouts": "2.5.0",
-    "express-session": "1.17.0",
+    "express-session": "^1.17.0",
     "google-maps-direction": "1.0.0",
     "google-maps-react": "2.0.2",
     "http-errors": "~1.6.3",
-    "joi": "14.3.1",
+    "joi": "^14.3.1",
     "joi-password-complexity": "^4.1.0",
-    "mongoose": "5.9.5",
+    "mongoose": "^5.9.5",
     "morgan": "~1.9.1",
-    "passport": "0.4.1",
-    "passport-local": "1.0.0",
+    "negotiator": "^0.6.2",
+    "passport": "^0.4.1",
+    "passport-local": "^1.0.0",
     "react-bootstrap": "1.0.0-beta.16",
     "react-bootstrap-spinner": "1.0.0",
     "react-geocode": "0.2.1",
@@ -49,7 +50,7 @@
     "react-places-autocomplete": "7.2.1",
     "react-router-dom": "5.1.2",
     "react-scripts": "3.4.0",
-    "styled-components": "5.0.1",
+    "styled-components": "^5.0.1",
     "swr": "0.1.17",
     "use-supercluster": "0.2.5"
   },
