--- a/package.json
+++ b/package.json
@@ -13,12 +13,12 @@
   "dependencies": {
     "@google/maps": "1.1.0",
     "@googlemaps/google-maps-services-js": "2.3.1",
-    "@material-ui/core": "4.9.1",
-    "@material-ui/icons": "^4.9.1",
-    "@material-ui/lab": "^4.0.0-alpha.46",
-    "axios": "^0.19.2",
-    "bcryptjs": "^2.4.3",
-    "bootstrap": "^4.4.1",
+    "@material-ui/core": "4.9.10",
+    "@material-ui/icons": "4.9.1",
+    "@material-ui/lab": "4.0.0-alpha.49",
+    "axios": "0.19.2",
+    "bcryptjs": "2.4.3",
+    "bootstrap": "4.4.1",
     "concurrently": "5.1.0",
     "connect-flash": "0.1.1",
     "contentful": "7.13.1",
@@ -26,22 +26,22 @@
     "cors": "2.8.5",
     "debug": "2.6.9",
     "ejs": "3.0.1",
-    "express": "^4.16.4",
+    "express": "4.16.4",
     "express-ejs-layouts": "2.5.0",
-    "express-session": "^1.17.0",
+    "express-session": "1.17.0",
     "google-maps-direction": "1.0.0",
     "google-maps-react": "2.0.2",
-    "http-errors": "~1.6.3",
-    "joi": "^14.3.1",
-    "joi-password-complexity": "^4.1.0",
-    "mongoose": "^5.9.5",
-    "morgan": "~1.9.1",
-    "negotiator": "^0.6.2",
-    "passport": "^0.4.1",
-    "passport-local": "^1.0.0",
+    "http-errors": "1.6.3",
+    "joi": "14.3.1",
+    "joi-password-complexity": "4.1.0",
+    "mongoose": "5.9.5",
+    "morgan": "1.9.1",
+    "negotiator": "0.6.2",
+    "passport": "0.4.1",
+    "passport-local": "1.0.0",
     "react-bootstrap": "1.0.0-beta.16",
     "react-bootstrap-spinner": "1.0.0",
-    "react-dom": "^16.13.1",
+    "react-dom": "16.13.1",
     "react-geocode": "0.2.1",
     "react-google-autocomplete": "1.1.2",
     "react-google-maps": "9.4.5",
@@ -49,8 +49,7 @@
     "react-native-paper": "3.6.0",
     "react-places-autocomplete": "7.2.1",
     "react-router-dom": "5.1.2",
-    "react-scripts": "3.4.0",
-    "styled-components": "^5.0.1",
+    "styled-components": "5.0.1",
     "swr": "0.1.17",
     "use-supercluster": "0.2.5"
   },
